--- a/conf/aidan_cartpole.yaml
+++ b/conf/aidan_cartpole.yaml
@@ -8,11 +8,11 @@ dataset_test_logger_textfile: "dataset_logger_test.txt"
 dataset_test_outofdistr_logger_textfile: "dataset_logger_test_ood.txt"
 model_logger_textfile: "model_logger.txt" 
 loss: "mean_squared_error"
-use_chunk: 1
+use_chunk: 50
 
 model:
   family: "gpt2"
-  n_positions: 300  # Match the sequence length from curriculum
+  n_positions: 1024  
   n_dims: 4  # cartpole has 4 state dimensions
   n_dims_out: 2
   n_embd: 256
@@ -28,21 +28,21 @@ training:
   learning_rate: 0.0001 # Conservative learning rate for stability
   save_every_steps: 250  # Regular checkpointing
   keep_every_steps: 1000 # Permanent checkpoints
-  train_steps: 10  # Extended training steps for full convergence
+  train_steps: 10000  # Extended training steps for full convergence
   test_pendulums: 1
   test_pendulums_outofdistr: 1
   resume_id: null
   curriculum:
     dims:
-      start: 2
+      start: 4
       end: 4           # Full state dimension
       inc: 1
-      interval: 1000000 # Gradual curriculum progression
+      interval: 2000000 # Gradual curriculum progression
     points:
       start: 300
-      end: 1000
+      end: 1024
       inc: 50
-      interval: 2000000 # Gradual trajectory length increase
+      interval: 25000 # Gradual trajectory length increase
 
 wandb:
   name: "full_gym_cartpole_training"
